# Go-Server-v23

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.claude/: settings.local.json
Cobalt/: gradle.properties  tmp_unicode_test.kt
Go-Server/: .gitignore  DEVELOPMENT.md
Go-Server/bootstrapper/: Cargo.toml  README.md
Go-Server/bootstrapper/src/: auth.rs  client.rs  config.rs  credentials.rs  enrollment.rs  heartbeat.rs  jar.rs  launch.rs  main.rs  manifest.rs  session.rs
Loader/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
bootstrapper/: Cargo.toml
gradle/: libs.versions.toml
mappings/: annotations-26.0.2.jar.json  asm-9.9.jar.json  asm-analysis-9.9.jar.json  asm-commons-9.9.jar.json  asm-tree-9.9.jar.json  asm-util-9.9.jar.json  authlib-7.0.61.jar.json  azure-json-1.4.0.jar.json  commons-io-2.20.0.jar.json  commons-lang3-3.19.0.jar.json  datafixerupper-9.0.19.jar.json  fabric-api-base-4abd26ae-1.0.5+4ebb5c083e.jar.json  fabric-api-lookup-api-v1-4abd26ae-1.6.113+1fb1cde93e.jar.json  fabric-biome-api-v1-4abd26ae-17.1.1+4fc5413f3e.jar.json  fabric-block-api-v1-4abd26ae-1.1.10+4ebb5c083e.jar.json  fabric-block-view-api-v2-4abd26ae-1.0.39+4ebb5c083e.jar.json  fabric-client-gametest-api-v1-4abd26ae-4.3.5+bfe9fcf43e.jar.json  fabric-command-api-v2-4abd26ae-2.4.7+6b42a6003e.jar.json  fabric-convention-tags-v1-4abd26ae-2.1.55+7f945d5b3e.jar.json  fabric-convention-tags-v2-4abd26ae-2.17.3+8ef948ba3e.jar.json  fabric-data-generation-api-v1-4abd26ae-23.4.0+69974c4e3e.jar.json  fabric-dimensions-v1-4abd26ae-4.0.28+4fc5413f3e.jar.json  fabric-entity-events-v1-4abd26ae-3.1.1+1d0ab4303e.jar.json  fabric-events-interaction-v0-4abd26ae-4.1.0+3b89ecf63e.jar.json  fabric-game-rule-api-v1-4abd26ae-2.0.3+4fc5413f3e.jar.json  fabric-item-api-v1-4abd26ae-11.5.20+d0c46b9e3e.jar.json  fabric-item-group-api-v1-4abd26ae-4.2.36+4fc5413f3e.jar.json  fabric-key-binding-api-v1-4abd26ae-1.1.7+4fc5413f3e.jar.json  fabric-language-kotlin-4abd26ae-1.13.8+kotlin.2.3.0.jar.json  fabric-lifecycle-events-v1-4abd26ae-2.6.15+4ebb5c083e.jar.json  fabric-loader-0.18.4.jar.json  fabric-loot-api-v2-4abd26ae-3.0.73+3f89f5a53e.jar.json  fabric-loot-api-v3-4abd26ae-2.0.20+78c8b4663e.jar.json  fabric-message-api-v1-4abd26ae-6.1.12+4ebb5c083e.jar.json  fabric-networking-api-v1-4abd26ae-5.1.5+ae1e07683e.jar.json  fabric-object-builder-api-v1-4abd26ae-21.1.39+4fc5413f3e.jar.json  fabric-particles-v1-4abd26ae-4.2.11+4fc5413f3e.jar.json  fabric-recipe-api-v1-4abd26ae-8.2.3+4ebb5c083e.jar.json  fabric-registry-sync-v0-4abd26ae-6.2.5+1718722b3e.jar.json  fabric-renderer-api-v1-4abd26ae-8.0.2+f4ffd2e53e.jar.json  (+48 more)
natives/: CMakeLists.txt
natives/include/: Types.h
natives/src/: common.hpp  jni_bridge.cpp  path_annotations.cpp  path_voxel_checks.hpp  pathfinder.cpp  pathfinder.hpp  pathfinder_jni.cpp  pathfinder_runtime.hpp  pathfinder_runtime_common.inl  pathfinder_runtime_walk.inl  teleport_first.cpp  teleport_first.hpp  world_state.cpp  world_state.hpp  world_voxel_cursor.hpp
natives/src/engine/: AStarPlanner.cpp  AStarPlanner.h  MovementExpander.cpp  MovementExpander.h  PathExecutor.cpp  PathExecutor.h  PathfinderEngine.cpp  PathfinderEngine.h  RotationController.cpp  RotationController.h  StuckDetector.cpp  WorldAccessor.cpp  WorldAccessor.h
natives/v5/: common.hpp
obfuscator/: build.gradle  obfuscate.bat
server/: .dockerignore  (+5 more)
(+3267 files in other folders)
