[package]
name = "bootstrapper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrapper"
path = "src/main.rs"

[dependencies]
zip = "2"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "2"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
winreg = "0.52"
chrono = { version = "0.4", features = ["clock"] }
rpassword = "7.5.2"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["dpapi", "wincrypt", "fileapi", "winbase"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"
